--- a/css/jdots.css
+++ b/css/jdots.css
@@ -1,4 +1,22 @@
-@import url("traditional.css");
+/**
+ * Stylite: jdots template
+ *
+ * @link http://www.stylite.de
+ * @package jdots
+ * @author Andreas Stöckel <as@stylite.de>
+ * @author Ralf Becker <rb@stylite.de>
+ * @author Nathan Gray <ng@stylite.de>
+ * @version $Id: class.jdots_framework.inc.php 958 2010-06-02 09:32:26Z ralfbecker $
+ */
+
+@import url("../../phpgwapi/templates/idots/css/traditional.css");
+@import url("../jquery-ui.css");
+@import url("../egw_fw.css");
+
+body {
+	padding: 5px !important;
+	background-image:none;
+}
 
 /**
  * Stylite theme changes
