--- a/egw_fw.css
+++ b/egw_fw.css
@@ -1,3 +1,14 @@
+/**
+ * Stylite: jdots template
+ *
+ * @link http://www.stylite.de
+ * @package jdots
+ * @author Andreas Stöckel <as@stylite.de>
+ * @author Ralf Becker <rb@stylite.de>
+ * @author Nathan Gray <ng@stylite.de>
+ * @version $Id: class.jdots_framework.inc.php 958 2010-06-02 09:32:26Z ralfbecker $
+ */
+
 body {
 	margin: 0px;
 	padding: 0px;
@@ -25,7 +36,7 @@ body {
 #egw_fw_logo {
 	display: block;
 	height: 50px;
-	background-image: url(../images/logo.png);
+	background-image: url(images/logo.png);
 	background-repeat: no-repeat;
 	background-position: center;
 }
@@ -48,7 +59,7 @@ body {
 }
 
 #egw_fw_topbar li {
-	background-image: url(../images/orange-ball.png);
+	background-image: url(images/orange-ball.png);
 	background-repeat: no-repeat;
 	background-position: left center;	
 	padding-left: 12px;
@@ -81,7 +92,7 @@ body {
 	cursor: pointer;
 	-moz-border-radius:5px; 
 	-webkit-border-radius:5px;
-	background-image:url(../images/tabs_bg.png);
+	background-image:url(images/tabs_bg.png);
 }
 
 .egw_fw_ui_sidemenu_entry_header_active {
@@ -98,7 +109,7 @@ body {
 
 .egw_fw_ui_sidemenu_entry_header:hover {
 	background-color: RGB(230, 230, 255);
-	background-image:url(../images/tabs_bg_hover.png);
+	background-image:url(images/tabs_bg_hover.png);
 }
 
 .egw_fw_ui_sidemenu_entry_content {
@@ -142,7 +153,7 @@ body {
 	display: inline-block;
 	width: 16px;
 	height: 16px;
-	background-image:url(../images/ajax-loader.gif);
+	background-image:url(images/ajax-loader.gif);
 	background-repeat: no-repeat;
 	background-position: center;
 	float: right;
@@ -168,12 +179,12 @@ body {
 	border-style: solid;
 	border-color: #c6ced6;
 	
-	background-image:url(../images/tabs_bg.png);
+	background-image:url(images/tabs_bg.png);
 	background-repeat:repeat-x;	
 }
 
 .egw_fw_ui_tab_header_hover{
-	background-image:url(../images/tabs_bg_hover.png);
+	background-image:url(images/tabs_bg_hover.png);
 }
 
 .egw_fw_ui_tab_header h1{
@@ -214,12 +225,12 @@ body {
 	margin-left: 5px;
 	background-repeat: no-repeat;
 	background-position: center;
-	background-image: url(../images/close_button.png);
+	background-image: url(images/close_button.png);
 	float: right;
 }
 
 .egw_fw_ui_tab_close_button:hover {
-	background-image: url(../images/close_button_hover.png);
+	background-image: url(images/close_button_hover.png);
 }
 
 .egw_fw_ui_tabs_header {
@@ -228,6 +239,6 @@ body {
 	-moz-border-radius-topleft:5px;
 	-webkit-border-top-left-radius:5px;
 	padding: 5px 5px 0px 5px;
-	background-image:url(../images/header_tabs_bg.png);
+	background-image:url(images/header_tabs_bg.png);
 	background-repeat:repeat-x;
 }
