- fixed sidebox was always redraws (even if no change) - fixed not displayed icon, if no link given - fixed not displayed delete icons in favorites (they are position   absolute and require egw_fw_ui_sidemenu_listitem to be position   relative)

--- a/egw_fw.css
+++ b/egw_fw.css
@@ -279,16 +279,17 @@ body {
 }
 
 .egw_fw_ui_category_content {
-	margin-left: 4px;
+	margin-left: 2px;
 	padding-top: 0px;
 	padding-bottom: 5px;
 }
 
 .egw_fw_ui_sidemenu_listitem {
-	padding-left: 15px;
+	padding-left: 16px;
 	background-repeat: no-repeat;
 	background-position: left center;
 	background-size: auto 12px;
 	-moz-background-size: auto 12px;
 	-webkit-background-size: auto 12px;
+	position: relative;
 }
