--- a/egw_fw.css
+++ b/egw_fw.css
@@ -58,8 +58,10 @@ body {
 	width: 100%;
 	text-align: center;
 	padding: 3px;
-	border-top: 1px solid #c6ced6;
-	background-color: #e2e7f0;
+	x-border-top: 1px solid #c6ced6;
+	x-background-color: #e2e7f0;
+	background-image:url(images/gradient22.png);
+	background-position: bottom;
 	clear: both;
 	height: 10px;
 }
@@ -100,23 +102,25 @@ body {
 }
 
 #egw_fw_tabs {
-	margin: 5px 5px 5px 245px;	
+	margin: 5px 5px 5px 240px;	
 /*	background-color: RGB(128, 128, 128);		*/
 }
 
 .egw_fw_ui_sidemenu_entry_header {
 	display: block;
-	width: 215px;
+	width: 205px;
 	height: 20px;
 	padding: 2px 5px 2px 5px;
 	margin: 0px 5px 0px 5px;
-	border-width: 1px 1px 0px 1px;
+	border-width: 0px 1px 0px 1px;
 	border-style: solid;
 	border-color: #c6ced6;
 	cursor: pointer;
-	-moz-border-radius:5px; 
+	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
-	background-image:url(images/tabs_bg.png);
+	border-radius:5px;
+	x-background-image:url(images/tabs_bg.png);
+	background-image:url(images/gradient30.png);
 }
 
 .egw_fw_ui_sidemenu_entry_header_active {
@@ -126,19 +130,21 @@ body {
 	-webkit-border-top-right-radius:5px;
 	-moz-border-radius-topleft: 5px;
 	-webkit-border-top-left-radius:5px;
-	border-width: 1px 1px 0px 1px !important;
-	background-image:url(images/tabs_bg_hover.png);
+	x-border-width: 0px 1px 0px 1px !important;
+	x-background-image:url(images/tabs_bg_hover.png);
+	background-image:url(images/gradient30blue.png);
 	/*background-color:white;*/
 }
 
 .egw_fw_ui_sidemenu_entry_header:hover {
 	background-color: RGB(230, 230, 255);
-	background-image:url(images/tabs_bg_hover.png);
+	background-image:url(images/gradient30blue.png);
+	x-background-image:url(images/tabs_bg_hover.png);
 }
 
 .egw_fw_ui_sidemenu_entry_content {
 	width: 215px;
-	padding: 2px 5px 2px 5px;
+	padding: 2px 0px 2px 0px;
 	margin: 0px 5px 0px 5px;
 	border-width: 0px 1px 0px 1px;
 	border-style: solid;
@@ -266,7 +272,9 @@ body {
 	-moz-border-radius-topleft:5px;
 	-webkit-border-top-left-radius:5px;
 	padding: 5px 5px 0px 5px;
-	background-image:url(images/header_tabs_bg.png);
+	x-background-image:url(images/header_tabs_bg.png);
+	background-image:url(images/gradient22.png);
+	background-position: bottom;
 	background-repeat:repeat-x;
 }
 
@@ -275,6 +283,7 @@ body {
 	padding: 0px;
 	color: RGB(0, 0, 0);
 	cursor: pointer;
+	background-image:url(images/gradient22.png);
 }
 
 .egw_fw_ui_category:hover {
