remove top border from active sidebox header

--- a/egw_fw.css
+++ b/egw_fw.css
@@ -123,6 +123,7 @@ body {
 	border-top-left-radius: 5px;
 	border-width: 2px 2px 2px 0px;
 	background-image:url(images/gradient30blue.png);
+	border-top: none;
 }
 
 .egw_fw_ui_sidemenu_entry_header:hover {
