egw_fw_ui_sidemenu_listitem need to be position:relative, that icons can have "position: absolute; right: Npx"

--- a/egw_fw.css
+++ b/egw_fw.css
@@ -338,6 +338,7 @@ body {
 	display: block;
 	padding-left: 16px;
 	padding-right: 3px;
+	position: relative;
 }
 
 .egw_fw_ui_sidemenu_listitem_icon {	
