--- a/egw_fw.css
+++ b/egw_fw.css
@@ -65,9 +65,13 @@ body {
 }
 
 #egw_fw_sidemenu {
-	display: block;
-	width: 205px;
+	position: absolute;
+	top: 53px;
+	bottom: 4px;
+	width: 217px;
 	padding-top: 5px;
+	overflow: hidden;
+	z-index: 0;
 }
 
 #egw_fw_topmenu {
@@ -124,10 +128,10 @@ body {
 
 .egw_fw_ui_sidemenu_entry_header {
 	display: block;
-	width: 195px;
+/*	width: 195px;*/
 	height: 20px;
 	padding: 2px 5px 2px 5px;
-	margin: 0px 5px 0px 5px;
+	margin: 0;
 	border-width: 0px 1px 0px 1px;
 	border-style: solid;
 	border-color: #c6ced6;
@@ -160,8 +164,9 @@ body {
 }
 
 .egw_fw_ui_sidemenu_entry_content {
-	width: 203px;
-	margin: 0px 5px 0px 5px;
+/*	width: 203px;*/
+	display: block;
+	margin: 0;
 	border-style: solid;
 	border-color: #b4c5e6;
 	border-width: 2px;
@@ -339,4 +344,55 @@ body {
 	width: 12px;
 	height: 12px;
 	float: left;
+}
+
+.egw_fw_ui_scrollarea
+{
+	overflow: hidden;
+	z-index: 0;
+}
+
+.egw_fw_ui_scrollarea_button
+{
+	position: absolute;
+	display: block;
+	width: 100%;
+	height: 12px;
+	z-index: 1;	
+}
+
+.egw_fw_ui_scrollarea_button_up .egw_fw_ui_scrollarea_button_hover
+{
+	background-image:url(images/gradient_scroll_up_hover.png);
+}
+
+.egw_fw_ui_scrollarea_button_down .egw_fw_ui_scrollarea_button_hover
+{
+	background-image:url(images/gradient_scroll_down_hover.png);
+}
+
+.egw_fw_ui_scrollarea_button_disabled
+{
+	display: none !important;
+}
+
+.egw_fw_ui_scrollarea_button_up
+{
+	top: 0px;
+	background-image:url(images/gradient_scroll_up.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.egw_fw_ui_scrollarea_button_down
+{
+	bottom: 0px;
+	background-image:url(images/gradient_scroll_down.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.egw_fw_ui_scrollarea_outerdiv
+{
+	height: 100%;
 }
