--- a/egw_fw.css
+++ b/egw_fw.css
@@ -417,8 +417,7 @@ body {
 	position: absolute;
 	width: 100%;
 	height: 5px;
-	cursor: n-resize;
-	cursor: ns-resize;
+	cursor: row-resize;
 }
 
 .egw_fw_ui_splitter_vertical {
@@ -428,6 +427,5 @@ body {
 	position: absolute;
 	width: 5px;
 	height: 100%;
-	cursor: e-resize;
-	cursor: ew-resize;
+	cursor: col-resize;
 }
