--- a/egw_fw.css
+++ b/egw_fw.css
@@ -447,6 +447,7 @@ body {
 .egw_fw_content_browser_div {
 	display: block;
 	overflow: auto;
+	background-color: RGB(100, 100, 255);
 }
 
 .egw_fw_content_browser_div_loading {
