Implemented display of 'AppHeader' below tab list

--- a/egw_fw.css
+++ b/egw_fw.css
@@ -489,3 +489,20 @@ body {
 
 .egw_fw_content_browser_iframe {
 }
+
+.egw_fw_ui_app_header_container {
+	border-width: 0px 1px 0px 1px;
+	border-style: solid;
+	border-color: #D5DDE6;
+	padding-bottom: 3px;
+}
+
+.egw_fw_ui_app_header {
+	background-color: #EAEFFA;
+	border-width: 0px 0px 1px 0px;
+	border-style: solid;
+	border-color: #D5DDE6;
+	padding: 4px 2px 2px 15px;
+	font-size: 9pt;
+	font-weight: bold;
+}
