--- a/egw_fw.css
+++ b/egw_fw.css
@@ -472,7 +472,7 @@ body {
 .egw_fw_content_browser_div {
 	display: block;
 	overflow: auto;
-	background-color: RGB(240, 240, 255);
+/*	background-color: RGB(240, 240, 255);*/
 }
 
 .egw_fw_content_browser_div_loading {
@@ -504,3 +504,4 @@ body {
 	font-size: 9pt;
 	font-weight: bold;
 }
+
