cache, concat and minify all css resources to speed up requests, javascript files planned too

--- a/print.css
+++ b/print.css
@@ -9,11 +9,13 @@
  * @version $Id$
  */
 
-@import url("../phpgwapi/templates/idots/print.css");
+/*@import url("../phpgwapi/templates/idots/print.css");*/
 
 /**
  * Changes for jDots
  */
+
+@media print {
 
 #egw_fw_sidebar, #egw_fw_topmenu, .egw_fw_ui_tabs_header {
 	display: none;
@@ -26,3 +28,5 @@
 .egw_fw_ui_tab_content iframe {
 	height: auto;
 }
+
+} /* @media print */
