--- a/css/jdots.css
+++ b/css/jdots.css
@@ -9,9 +9,9 @@
  * @version $Id: class.jdots_framework.inc.php 958 2010-06-02 09:32:26Z ralfbecker $
  */
 
-@import url("../../phpgwapi/templates/idots/css/traditional.css");
-@import url("../jquery-ui.css");
-@import url("../egw_fw.css");
+/*@import url("../../phpgwapi/templates/idots/css/traditional.css");*/
+/*@import url("../jquery-ui.css");*/
+/*@import url("../egw_fw.css");*/
 
 /**
  * theme changes from idots-traditional follow
