Remove old jquery-ui.css, it conflicts with latest in phpgwapi

--- a/css/jdots.css
+++ b/css/jdots.css
@@ -9,8 +9,8 @@
  * @version $Id: class.jdots_framework.inc.php 958 2010-06-02 09:32:26Z ralfbecker $
  */
 
+/* These imports processed by framework */
 /*@import url("../../phpgwapi/templates/idots/css/traditional.css");*/
-/*@import url("../jquery-ui.css");*/
 /*@import url("../egw_fw.css");*/
 
 /**
