--- a/egw_fw.css
+++ b/egw_fw.css
@@ -9,11 +9,11 @@
  * @version $Id$
  */
 
-body {
+html, body {
 	margin: 0px !important;
 	padding: 0px !important;
-	width: 100% !important;
-	height: 100% !important;
+	width: 99% !important;
+	height: 99% !important;
 }
 
 #egw_fw_basecontainer {
@@ -471,7 +471,7 @@ body {
 
 .egw_fw_content_browser_div {
 	display: block;
-	overflow: auto;
+	overflow: hidden auto;
 /*	background-color: RGB(240, 240, 255);*/
 }
 
