--- a/egw_fw.css
+++ b/egw_fw.css
@@ -471,8 +471,9 @@ html, body {
 
 .egw_fw_content_browser_div {
 	display: block;
-	overflow: hidden auto;
-/*	background-color: RGB(240, 240, 255);*/
+	overflow-x: hidden;
+	overflow-y: auto;
+	/*	background-color: RGB(240, 240, 255);*/
 }
 
 .egw_fw_content_browser_div_loading {
