--- a/egw_fw.css
+++ b/egw_fw.css
@@ -45,7 +45,8 @@ html, body {
 }
 
 #egw_divLogo img {
-	height: 48px;
+	max-height: 48px;
+	max-width: 100%;
 	border: none;
 }
 
@@ -81,7 +82,7 @@ html, body {
 }
 
 #egw_fw_topmenu {
-	display: block;	
+	display: block;
 	text-align: right;
 	padding-top: 0;
 	padding-bottom: 5px;
@@ -107,7 +108,7 @@ html, body {
 #egw_fw_topmenu > * > ul > li {
 	background-image: url(images/bullet.png);
 	background-repeat: no-repeat;
-	background-position: left center;	
+	background-position: left center;
 	padding-left: 12px;
 	padding-right: 10px;
 }
@@ -383,7 +384,7 @@ html, body {
 	position: relative;
 }
 
-.egw_fw_ui_sidemenu_listitem_icon {	
+.egw_fw_ui_sidemenu_listitem_icon {
 	display: inline;
 	margin-left: -16px;
 	padding-right: 3px;
@@ -404,7 +405,7 @@ html, body {
 	display: block;
 	width: 100%;
 	height: 12px;
-	z-index: 2;	
+	z-index: 2;
 }
 
 .egw_fw_ui_scrollarea_button_up.egw_fw_ui_scrollarea_button_hover, .egw_fw_ui_scrollarea_button_down.egw_fw_ui_scrollarea_button_hover
@@ -482,7 +483,7 @@ html, body {
 	top: 0px;
 	left: 0px;
 	width: 16px;
-	height: 16px;	
+	height: 16px;
 	background-image: url(images/ajax-loader.gif);
 	background-position: center;
 	background-repeat: no-repeat;
