--- a/print.css
+++ b/print.css
@@ -22,10 +22,9 @@
 }
 
 #egw_fw_main {
-	margin: 0;
+	margin: 0 !important;
 }
-
-.egw_fw_ui_tab_content iframe {
+.egw_fw_ui_tab_content div {
 	height: auto;
 }
 
