--- a/print.css
+++ b/print.css
@@ -24,8 +24,11 @@
 #egw_fw_main {
 	margin: 0 !important;
 }
+#egw_fw_basecontainer {
+	position: inherit;
+}
 .egw_fw_ui_tab_content div {
-	height: auto;
+	height: auto !important;
 }
 
 } /* @media print */
