--- a/print.css
+++ b/print.css
@@ -17,12 +17,18 @@
 
 @media print {
 
-#egw_fw_sidebar, #egw_fw_topmenu, .egw_fw_ui_tabs_header {
+@page {size: landscape}
+
+html, body {
+	width: 100% !important;
+}
+#egw_fw_sidebar, #egw_fw_topmenu, .egw_fw_ui_tabs_header, #egw_fw_topmenu_slide {
 	display: none;
 }
 
-#egw_fw_main {
-	margin: 0 !important;
+#egw_fw_main, #egw_fw_tabs {
+	margin: 0px !important;
+	float: none !important;
 }
 #egw_fw_basecontainer {
 	position: inherit;
