Add some general classes to improve styling for print

--- a/print.css
+++ b/print.css
@@ -17,24 +17,41 @@
 
 @media print {
 
-@page {size: landscape}
+	@page {size: landscape}
 
-html, body {
-	width: 100% !important;
-}
-#egw_fw_sidebar, #egw_fw_topmenu, .egw_fw_ui_tabs_header, #egw_fw_topmenu_slide {
-	display: none;
-}
+	html, body {
+		width: 100% !important;
+	}
+	#egw_fw_sidebar, #egw_fw_topmenu, .egw_fw_ui_tabs_header, #egw_fw_topmenu_slide , #egw_message, .mailDisplayAttachments {
+		display: none;
+	}
 
-#egw_fw_main, #egw_fw_tabs {
-	margin: 0px !important;
-	float: none !important;
-}
-#egw_fw_basecontainer {
-	position: inherit;
-}
-.egw_fw_ui_tab_content div {
-	height: auto !important;
-}
-
+	#egw_fw_main, #egw_fw_tabs {
+		margin: 0px !important;
+		float: none !important;
+	}
+	#egw_fw_basecontainer {
+		position: inherit;
+	}
+	.egw_fw_ui_tab_content div {
+		height: auto !important;
+	}
+	.et2_toolbar div {
+			display: none;
+	}
+	body {
+		background: white;
+	}
+	.tmpPrintDiv {
+		display: block;
+		overflow: visible;
+		height: auto;
+	}
 } /* @media print */
+
+@media screen {
+	.tmpPrintDiv {
+		display: none;
+		height: auto;
+	}
+}
