--- a/egw_fw.css
+++ b/egw_fw.css
@@ -12,6 +12,8 @@
 html, body {
 	margin: 0px !important;
 	padding: 0px !important;
+	height: 100% !important;
+	width: 100% !important;
 }
 
 #egw_fw_basecontainer {
