--- a/print.css
+++ b/print.css
@@ -19,9 +19,11 @@
 
 	html, body {
 		width: 100% !important;
+		height: auto !important;
 	}
 	#egw_fw_sidebar, #egw_fw_topmenu, .egw_fw_ui_tabs_header, #egw_fw_topmenu_slide,#egw_fw_print,#egw_fw_logout {
 		display: none;
+		width: 0px;
 	}
 
 	#egw_fw_main, #egw_fw_tabs {
@@ -31,8 +33,13 @@
 	#egw_fw_basecontainer {
 		position: inherit;
 	}
-	.egw_fw_ui_tab_content, .egw_fw_ui_tab_content > div {
-		height: auto;
+	.egw_fw_ui_tab_content {
+		position: relative;
+		float: none;
+	}
+	.egw_fw_ui_tab_content, .egw_fw_ui_tab_content div.egw_fw_content_browser_div {
+		height: auto !important;
+		position: relative;
 	}
 	body {
 		background: white;
