--- a/egw_fw.css
+++ b/egw_fw.css
@@ -253,7 +253,23 @@ html, body {
 	font-size: 10pt;
 	font-weight: bold;
 }
-
+.egw_fw_ui_sidemenu_entry_header_active h1 {
+	background-image: url(images/reload.png);
+	background-repeat: no-repeat;
+	background-size: 16px;
+	background-position-x: 74%;
+	background-position-y: 60%;
+	width: 100%;
+	display: block;
+	margin: 3px;
+}
+.egw_fw_ui_sidemenu_entry_header_active h1:active {
+	background-image: url(images/ajax-loader.gif) !important;
+}
+.egw_fw_ui_sidemenu_entry_header_active .egw_fw_ui_ajaxloader {
+	margin-top: -7%;
+    margin-right: 23%;
+}
 .egw_fw_ui_sidemenu_marker {
 	display: block;
 	height: 20px;
@@ -580,13 +596,13 @@ html, body {
 	background-color: #E0E0E0;
 }
 #egw_fw_sidebar .egw_fw_sidebar_toggleOn #egw_fw_toggler:hover span {
-	background-color: #E0E0E0;
+	background-color: black;
 }
 #egw_fw_sidebar .egw_fw_sidebar_toggleOn #egw_fw_toggler:hover span:before {
-	background-color: #E0E0E0;
+	background-color: black;
 }
 #egw_fw_sidebar .egw_fw_sidebar_toggleOn #egw_fw_toggler:hover span:after {
-	background-color: #E0E0E0;
+	background-color: black;
 }
 #egw_fw_sidebar .egw_fw_sidebar_toggleOn .egw_fw_ui_sidemenu_entry_content {
 	display: none !important;
