--- a/egw_fw.css
+++ b/egw_fw.css
@@ -259,6 +259,7 @@ html, body {
 	background-size: 16px;
 	background-position-x: 74%;
 	background-position-y: 60%;
+	background-position: 74%;
 	width: 100%;
 	display: block;
 	margin: 3px;
