--- a/egw_fw.css
+++ b/egw_fw.css
@@ -551,7 +551,12 @@ html, body {
 }
 #egw_fw_sidebar #egw_fw_toggler span:before {
 	transition-duration: 0.7s;
+	-webkit-transition-duration: 0.7s;
+	-moz-transition-duration: 0.7s;
 	transform: rotate(145deg) translate(8px, -2px);
+	-ms-transform: rotate(145deg) translate(8px, -2px);
+	-moz-transform: rotate(145deg) translate(8px, -2px);
+	-webkit-transform: rotate(145deg) translate(8px, -2px);
 	background-color: black;
 }
 #egw_fw_sidebar #egw_fw_toggler span:before,
@@ -569,7 +574,12 @@ html, body {
 #egw_fw_sidebar #egw_fw_toggler span:after {
 	top: 9px;
 	transition-duration: 0.7s;
+	-moz-transition-duration: 0.7s;
+	-webkit-transition-duration: 0.7s;
 	transform: rotate(-145deg) translate(8px, 2px);
+	-ms-transform: rotate(-145deg) translate(8px, 2px);
+	-moz-transform: rotate(-145deg) translate(8px, 2px);
+	-webkit-transform: rotate(-145deg) translate(8px, 2px);
 	background-color: black;
 }
 #egw_fw_sidebar .egw_fw_sidebar_toggleOn #egw_fw_toggler {
@@ -584,6 +594,9 @@ html, body {
 #egw_fw_sidebar .egw_fw_sidebar_toggleOn #egw_fw_toggler span:before,
 #egw_fw_sidebar .egw_fw_sidebar_toggleOn #egw_fw_toggler span:after {
 	transform: none;
+	-ms-transform: none;
+	-moz-transform: none;
+	-webkit-transform: none;
 	width: 100%;
 	height: 5px;
 	background-color: #E0E0E0;
