WIP EGroupware Tutorial: - Implement video navigation on popup - Implement introduction video with user confirmation dialog based on session - New layout for tutorials list both in sidebar and popup - Separate tutorials styles to be able to set different styles base on templates

--- a/css/jdots.css
+++ b/css/jdots.css
@@ -11,6 +11,7 @@
 
 /* These imports processed by framework */
 /*@import url("../../phpgwapi/templates/idots/css/traditional.css");*/
+/*@import url("../../phpgwapi/templates/default/def_tutorials.css");*/
 /*@import url("../egw_fw.css");*/
 
 /**
